<resources>
    <string name="app_name">PieceItPC</string>
    <string name="profileOption">Profile</string>
    <string name="settingsOption">Settings</string>
    <string name="profileIcon">Profile Icon</string>
    <string name="newBuild">Start New Build</string>
    <string name="newContent">Saved Content</string>
    <string name="home_screen">HomeScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan Your PC Part Here</string>
    <string name="tutorial_title">PC Tutorial Highlights</string>
    <string name="username_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log In </string>
    <string name="userPasswdKV">com.cs407.lab5_milestone.userPasswdKV</string>
    <string name="fail_login">Wrong Username or Password</string>
    <string name="login_screen">LoginScreen</string>
    <string name="note_list_screen">NoteListScreen</string>
    <string name="note_database">noteDatabase</string>
    <string name="note_content_screen">NoteContentScreen</string>
    <string name="save_button">Save</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="greeting_text">Welcome %1$s!</string>
<<<<<<< HEAD
    <string name="tutorial">PC Tutorial Highlights</string>>
=======
<<<<<<< HEAD
    <string name="build_highlights">PC Build Highlights</string>>
=======
>>>>>>> main
    <string name="create_account">Create Account</string>
    <string name="error">Error</string>
    <string name="label_recognition_error">Label Recognition Error</string>
    <string name="saved_videos">Saved Videos</string>
    <string name="build_inspo">Build Inspo</string>
    <string name="build_highlights">PC Build Highlights</string>

    <string name="save_build_text">save build</string>

<<<<<<< HEAD
    <string name = "parts_list">Part List</string>
    <string name = "part_case">Case: </string>
    <string name = "part_caseCost">Case Cost: </string>
    <string name = "part_caseFans">Case Fans: </string>
    <string name = "part_caseFansCost">Case Fans Cost: </string>
    <string name = "part_cpu">Cpu: </string>
    <string name = "part_cpuCooler">Cpu Cooler: </string>
    <string name = "part_cpuCoolerCost">Cpu Cooler Cost: </string>
    <string name = "part_cpuCost">Cpu Cost: </string>
    <string name = "part_custom">Custom: </string>
    <string name = "part_customCost">Custom Cost: </string>
    <string name = "part_memory">Memory: </string>
    <string name = "part_memoryCost">Memory Cost: </string>
    <string name = "part_motherboard">Motherboard: </string>
    <string name = "part_motherboardCost">Motherboard Cost: </string>
    <string name = "part_powerSupply">Power Supply: </string>
    <string name = "part_powerSupplyCost">Power Supply Cost: </string>
    <string name = "part_storage">Storage: </string>
    <string name = "part_storageCost">Storage Cost: </string>
    <string name = "part_videocard">Videocard: </string>
    <string name = "part_videocardCost">Videocard Cost: </string>
    <string name = "part_totalCost">Total Cost: </string>
    <string name = "searchHint">Search for...</string>
    <string name="enterButton">Enter</string>
=======
>>>>>>> fc270c82f938e4b4b59925494a58e238121eab42
>>>>>>> main
</resources>